2004-01-20  Jesper Harder  <harder@ifa.au.dk>

	* spam-stat.el (spam-stat-to-hash-table): Use :size argument in
	make-hash-table.

2004-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* canlock.el (base64-encode-string): Don't autoload it.

2004-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* run-at-time.el: Remove useless (require 'itimer),
	eval-and-compile and (featurep 'xemacs).

2004-01-16  Jesper Harder  <harder@ifa.au.dk>

	* gnus-msg.el (gnus-post-news): Use blank Newsgroups line if
	GROUP is a virtual group.

2004-01-16  Steve Youngs  <sryoungs@bigpond.net.au>

	* gnus.el: Autoload `message-y-or-n-p'.

2004-01-15  Jesper Harder  <harder@ifa.au.dk>

	* pgg-parse.el: Remove unnecessary (require 'custom).

	* pgg-def.el: do.

	* nnmail.el: do.

	* gnus-undo.el: do.

	* gnus-picon.el: do.

	* gnus-util.el: do.

2004-01-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-pick-line-number): Add autoload.

2004-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decoce.el (mm-multiple-handles): Recognize a string as a mime
	handle, as well as a list.

	* mm-view.el (mm-w3m-cid-retrieve-1): Call itself recursively.
	Suggested by ARISAWA Akihiro <ari@mbf.sphere.ne.jp>.
	(mm-w3m-cid-retrieve): Simplify.

2004-01-14  Kai Grossjohann  <kai@emptydomain.de>

	* message.el (message-kill-to-signature): Allow prefix arg to
	specify number of lines to keep before signature.  From Vasily
	Korytov.
	(message-kill-to-signature): Change docstring.

2004-01-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* canlock.el: Always require sha1-el.
	(canlock-sha1): Bind sha1-maximum-internal-length to nil.

	* message.el: Autoload sha1 only when compiling.

	* lpath.el: Bind eudc-protocol for both Emacs and XEmacs; fbind
	eudc-expand-inline for XEmacs.

2004-01-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-canlock-generate): Require sha1-el.

2004-01-13  Jesper Harder  <harder@ifa.au.dk>

	* message.el (message-expand-name): Silence the byte compiler.
