@@ -1,3 +1,9 @@
+2004-01-17  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* gnus-registry.el (gnus-registry-split-fancy-with-parent):
+	Suppress unnecessary messages.  From Nevin Kapur
+	<nkapur@cs.caltech.edu>.
+
 2004-01-20  Jesper Harder  <harder@ifa.au.dk>
 
 	* spam-stat.el (spam-stat-to-hash-table): Use :size argument in
